--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,71 @@
 /*  your css code here. If applicable */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
+
+*{
+box-sizing: border-box;	
+}
+h3{
+	margin: 0;
+}
+
+body{
+	font-family:'Poppins', sans-serif;
+	padding:0;
+	margin:0;
+	display:flex;
+	align-items:center;
+	justify-content: center;
+	height:100vh;
+}
+
+#otp_card{
+	
+	text-align:center;
+	background-color:white;
+	border: 1px solid black;
+	border-radius:15px;
+	padding:3rem;
+	box-shadow:0 10px 40px -20px black;
+}
+.otp-card-inputs{
+	margin:30px 0;
+	display:grid;
+	gap:30px;
+	justify-content:center;
+	grid-template-columns:repeat(6,auto);
+	
+}
+.otp-card-inputs input{
+	width:60px;
+	height:70px;
+	font-size:35px;
+	text-align:center;
+	border:. solid black;
+	
+}
+.otp-card-inputs input: focus{
+	border-color: transparent;
+	
+}
+.end-para{
+background: lightgray;
+margin:1px;
+padding:1px;
+	border-radius:1px;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
