--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,75 @@
-/*  your css code here. If applicable */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
-
-*{
-box-sizing: border-box;	
+@import url('https://fonts.googleapis.com/css?family=Muli:300,700&display=swap');
+ 
+*body{
+    box-sizing: border-box;
 }
-h3{
-	margin: 0;
-}
-
+ 
 body{
-	font-family:'Poppins', sans-serif;
-	padding:0;
-	margin:0;
-	display:flex;
-	align-items:center;
-	justify-content: center;
-	height:100vh;
+    background-color: #fbfcfe;
+    font-family: 'Muli',sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
 }
-
-#otp-card{
-	
-	text-align:center;
-	background-color:white;
-	border: 1px solid black;
-	border-radius:15px;
-	padding:3rem;
-	box-shadow:0 10px 40px -20px black;
+ 
+.container{
+    background-color: #fff;
+    border: 3px #000 solid;
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 1000px;
+    text-align: center;
 }
-#code-container{
-	margin:30px 0;
-	display:grid;
-	gap:30px;
-	justify-content:center;
-	grid-template-columns:repeat(6,auto);
-	
+ 
+.code-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0;
 }
-#code-container input{
-	width:60px;
-	height:70px;
-	font-size:35px;
-	text-align:center;
-	
-	border:. solid black;
-	
+ 
+.code{
+    caret-color: transparent;
+    border-radius: 5px;
+    font-size: 75px;
+    height: 120px;
+    width: 100px;
+    border: 1px solid #eee;
+    margin: 1%;
+    text-align: center;
+    font-weight: 300;
+    -moz-appearance: textfield;
 }
-
-.end-para{
-background: lightgray;
-margin:1px;
-padding:1px;
-	border-radius:1px;
-	
+ 
+.code::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.code:valid{
+    border-color: #3498db;
+    box-shadow: 0 10px 10px -5px rgba(0,0,0,0.25);
+}
+ 
+.info{
+    background-color: #eaeaea;
+    display: inline-block;
+    padding: 10px;
+    line-height: 20px;
+    max-width: 400px;
+    color: #777;
+    border-radius: 5px;
+}
+ 
+@media(max-width:600px){
+    .code-container{
+        flex-wrap: wrap;
+    }
+    .code{
+        font-size: 60px;
+        height: 80px;
+        max-width: 70px;
+    }
+}
